--- a/deploy/kubernetes/base/controller.yaml
+++ b/deploy/kubernetes/base/controller.yaml
@@ -52,6 +52,8 @@ spec:
                   key: access_key
                   optional: true
           volumeMounts:
+            - name: socket-dir
+              mountPath: /var/lib/csi/sockets/pluginproxy/
             - name: config-volume
               mountPath: /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
               subPath: ca-certificates.crt
@@ -102,6 +104,8 @@ spec:
             - name: socket-dir
               mountPath: /csi
       volumes:
+        - name: socket-dir
+          emptyDir: {}
         - name: config-volume
           configMap:
             name: aws-config
